[package]
name = "gitlab-ci-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
gitlab = { version = "0.1708.2" }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
moka = { version = "0.10", features = ["future"] }


